--- a/Contact me.html
+++ b/Contact me.html
@@ -27,7 +27,7 @@ and open the template in the editor.
         </div>
         <section>
             <div class='genformat' id='intro'>
-                Have anything that might interest me? Want to learn more about me? Contact me through the following:
+                Interested in learning more about me? Contact me through the following:
             </div><br>
             <div class="genformat"><strong>Email me:</strong> mmmoussa@uwaterloo.ca</div>
             <div class="genformat"><strong>LinkedIn:</strong> ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/</div>
