--- a/Skills.html
+++ b/Skills.html
@@ -28,10 +28,10 @@ and open the template in the editor.
         <section>
             <div id="leftColumn">
                 <ul class="genformat" id='intro'>
-                    <li>Programming languages: experienced with C++, Python, HTML, and CSS
+                    <li>Programming languages and Web Development: experienced with C++, Python, HTML, and CSS
                         <ul class="indented">
                             <li>Completed small projects using C++ and Python</li>
-                            <li>Projects can be found here: "link to github"</li>
+                            <li>Projects can be found on <a href='https://github.com/mmmoussa' class='weblink'>GitHub</a></li>
                             <li>Built this website using HTML and CSS</li>
                         </ul><br>
                     </li>
