--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ and open the template in the editor.
                         <li>I am a university student studying Systems Design Engineering</li>
                         <li>I am passionate about technology and software development</li>
                         <li>I am a well-rounded individual who always makes time for athletics and enjoyment</li>
-                        <li>Until recently, I was a national level diver! Yes, that's right, I was twice a top twelve finalist!
+                        <li>Until recently, I was a national-level springboard and platform diver! Yes, that's right, I was 
+                            twice a top twelve national finalist!
                         </li>
                     </ul><br>
                 </li>
