--- a/Skills.html
+++ b/Skills.html
@@ -31,7 +31,7 @@ and open the template in the editor.
                     <li>Programming languages and Web Development: experienced with C++, Python, HTML, and CSS
                         <ul class="indented">
                             <li>Completed small projects using C++ and Python</li>
-                            <li>Projects can be found on <a href='https://github.com/mmmoussa' class='weblink'>GitHub</a></li>
+                            <li>Projects can be found on <a href="https://github.com/mmmoussa" class='weblink'>GitHub</a></li>
                             <li>Built this website using HTML and CSS</li>
                         </ul><br>
                     </li>
