--- a/About me.html
+++ b/About me.html
@@ -27,14 +27,14 @@ and open the template in the editor.
         </div>
         <section>
             <img src='profile.jpeg' alt = "My picture" class='profile'/>
-            <p class='genformat' id='right'>
+            <div class='genformat' id='right'>
                 I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                 myself to self-improvement and am constantly looking for new and challenging problems. I enjoy software 
                 development, and am frequently learning new languages or working on side projects. <br><br>Currently, I am 
                 in my 1A term (first term) of Systems Design Engineering at the University of Waterloo. I am in search of a 
                 co-op position relating to software development (mobile, web, or other) for the period of January-April, 2015. 
                 Interested in contacting me to find out more? Click on the "Contact me" tab.
-            </p>
+            </div>
         </section>
     </body>
 </html>
