--- a/About me.html
+++ b/About me.html
@@ -27,7 +27,7 @@ and open the template in the editor.
         </div>
         <section>
             <img src='profile.jpeg' alt = "My picture" class='profile'/>
-            <div class='genformat' id='right'>
+            <div id='right'>
                 I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                 myself to self-improvement and am constantly looking for new and challenging problems. I enjoy software 
                 development, and am frequently learning new languages or working on side projects. <br><br>Currently, I am 
