--- a/About me.html
+++ b/About me.html
@@ -26,7 +26,7 @@ and open the template in the editor.
             </div>
         </div>
         <section>
-            <div id='right'>
+            <div id='intro'>
                 I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                 myself to self-improvement and am constantly looking for new and challenging problems. I enjoy software 
                 development, and am frequently learning new languages or working on side projects. <br><br>Currently, I am 
