--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ and open the template in the editor.
                     <ul class="indented">
                         <li>I am a university student studying Systems Design Engineering</li>
                         <li>I am passionate about technology and software development</li>
-                        <li>I am a well-rounded individual who always makes time for athletics and enjoyment</li>
+                        <li>I am a well-rounded individual who always makes time for side projects, athletics, and enjoyment</li>
                         <li>Until recently, I was a national-level springboard and platform diver! Yes, that's right, I was 
                             twice a top twelve national finalist!
                         </li>
@@ -40,13 +40,13 @@ and open the template in the editor.
                 <li>What situation describes me best?
                     <ul class="indented">
                         <li>I spent the better part of a weekend learning the basics of HTML and CSS</li>
-                        <li>I used what I'd learned, along with a lot of Googling, to build this website from the ground up</li>
+                        <li>I used what I'd learned, along with a lot of web searching, to build this website from the ground up</li>
                         <li>I debugged. A lot. C'est la vie.</li>
+                        <li>I finished my website but continue to improve on it, making it more responsive and keeping it up to date</li>
                         <li>Overall, I am resourceful and know how to get the job done</li>
                     </ul>
                 </li>
             </ul>
-            <div class="genformat" id='centered'><strong>Find out more by checking out my other tabs!</strong></div>
         </section>
     </body>
 </html>
