--- a/Skills.html
+++ b/Skills.html
@@ -27,14 +27,14 @@ and open the template in the editor.
         </div>
         <section>
             <ul class="genformat" id='intro'>
-                <li>Programming languages and Web Development: experienced with C++, Python, HTML, and CSS
+                <li>Programming Languages and Web Development: experienced with C++, Python, HTML, and CSS
                     <ul class="indented">
-                        <li>Completed small projects using C++ and Python</li>
+                        <li>Completed several projects using C++ and Python</li>
+                        <li>Built this website using HTML, CSS, and a line of PHP</li>
                         <li>Projects can be found on <a href="https://github.com/mmmoussa" class='weblink'>GitHub</a></li>
-                        <li>Built this website using HTML and CSS</li>
                     </ul><br>
                 </li>
-                <li>Programming skills: experienced with pair programming and independently learning programming languages
+                <li>Programming Skills: experienced with pair programming and independently learning programming languages
                     <ul class="indented">
                         <li>Learned C++ initially through online resources</li>
                         <li>Learned HTML and CSS entirely through web resources</li>
@@ -47,7 +47,7 @@ and open the template in the editor.
                         <li>Experience with Excel and PowerPoint</li>
                     </ul><br>
                 </li>
-                <li>Design software: SolidWorks, Adobe Photoshop
+                <li>Design Software: SolidWorks, Adobe Photoshop
                     <ul class="indented">
                         <li>Developed a few parts using SolidWorks</li>
                         <li>Some past experience using Photoshop</li>
