--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>About me</title>
+        <title>About</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css">
@@ -18,10 +18,10 @@ and open the template in the editor.
                 <h3>Systems Design Engineering student, University of Waterloo</h3>
             </hgroup><br>
             <div id="nav">
-                <div class="navbar"><a href="index.html" id="aboutnav">About me</a></div>
+                <div class="navbar"><a href="index.html" id="aboutnav">About</a></div>
                 <div class="navbar"><a href="Skills.html" id="skillsnav">Skills</a></div>
                 <div class="navbar"><a href="Education.html" id="educationnav">Education</a></div>
-                <div class="navbar"><a href="Contact me.html" id="contactnav">Contact me</a></div>
+                <div class="navbar"><a href="Contact me.html" id="contactnav">Contact</a></div>
             </div>
         </div>
         <section>
@@ -38,7 +38,7 @@ and open the template in the editor.
                 am resourceful and either know or can find out how to get the job done. <br><br>
                 Currently, I am in my 1A term (first term) of Systems Design Engineering at the University of Waterloo. I am in 
                 search of a co-op position relating to software development (mobile, web, or other) for the period of 
-                January-April, 2015. Interested in contacting me to find out more? Click on the "Contact me" tab.
+                January-April, 2015. Interested in contacting me to find out more? Click on the "Contact" tab.
             </div>
             <img src='profile.jpeg' alt = "My picture" class='profile'/>
         </section>
