--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
                 <div class="navbar"><a href="index.html" id="aboutnav">About</a></div>
                 <div class="navbar"><a href="Skills.html" id="skillsnav">Skills</a></div>
                 <div class="navbar"><a href="Education.html" id="educationnav">Education</a></div>
-                <div class="navbar"><a href="Contact me.html" id="contactnav">Contact</a></div>
+                <div class="navbar"><a href="Contact.html" id="contactnav">Contact</a></div>
             </div>
         </div>
         <section>
