--- a/Education.html
+++ b/Education.html
@@ -18,10 +18,10 @@ and open the template in the editor.
                 <h3>Systems Design Engineering student, University of Waterloo</h3>
             </hgroup><br>         
             <div id="nav">
-                <div class="navbar"><a href="index.html" id="aboutnav">About me</a></div>
+                <div class="navbar"><a href="index.html" id="aboutnav">About</a></div>
                 <div class="navbar"><a href="Skills.html" id="skillsnav">Skills</a></div>
                 <div class="navbar"><a href="Education.html" id="educationnav">Education</a></div>
-                <div class="navbar"><a href="Contact me.html" id="contactnav">Contact me</a></div>
+                <div class="navbar"><a href="Contact.html" id="contactnav">Contact</a></div>
             </div>
         </div>
         <img src='UW logo.jpg' alt = "UW logo" class='UWlogo'/>
