--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Contact me</title>
+        <title>Contact</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css">
@@ -18,10 +18,10 @@ and open the template in the editor.
                 <h3>Systems Design Engineering student, University of Waterloo</h3>
             </hgroup><br>   
             <div id="nav">
-                <div class="navbar"><a href="index.html" id="aboutnav">About me</a></div>
+                <div class="navbar"><a href="index.html" id="aboutnav">About</a></div>
                 <div class="navbar"><a href="Skills.html" id="skillsnav">Skills</a></div>
                 <div class="navbar"><a href="Education.html" id="educationnav">Education</a></div>
-                <div class="navbar"><a href="Contact me.html" id="contactnav">Contact me</a></div>
+                <div class="navbar"><a href="Contact.html" id="contactnav">Contact</a></div>
             </div>
         </div>
         <section>
