--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ and open the template in the editor.
                 to build this website from the ground up (i.e. no bootstrap, etc.). Then, I debugged. A lot. I finally finished, 
                 but continue to improve on it (such as by making it more responsive) and keep it up-to-date. To sum it all up, I 
                 am resourceful and either know or can find out how to get the job done. <br><br>
-                Currently, I am in my 1A term (first term) of Systems Design Engineering at the University of Waterloo. I am in 
-                search of a co-op position relating to software development (mobile, web, or other) for the period of 
-                January-April, 2015. Interested in contacting me to find out more? Click on the "Contact" tab.
+                Currently, I am in my 1A term (first term) of Systems Design Engineering at the University of Waterloo. I am 
+                excited to announce that for my first co-op term, taking place from January-April, I will be employed with 
+                Unitron Hearing Ltd. Interested in contacting me to find out more? Click on the "Contact" tab.
             </div>
             <img src='profile.jpeg' alt = "My picture" class='profile'/>
         </section>
