--- a/Skills.html
+++ b/Skills.html
@@ -26,31 +26,32 @@ and open the template in the editor.
         </div>
         <section>
             <ul class="genformat" id='intro'>
-                <li>Programming Languages and Web Development: experienced with C++, Python, HTML, and CSS
+                <li>Programming Languages and Web Development: experienced with C++, Python, Lua, HTML, and CSS
                     <ul class="indented">
                         <li>Completed several projects using C++ and Python</li>
+                        <li>Wrote a script for the Myo armband using Lua during an engineering hackathon</li>
                         <li>Built this website using HTML, CSS, and a line of PHP</li>
                         <li>Projects can be found on <a href="https://github.com/mmmoussa" class='weblink'>GitHub</a></li>
                     </ul><br>
                 </li>
                 <li>Programming Skills: experienced with pair programming and independently learning programming languages
                     <ul class="indented">
-                        <li>Learned C++ initially through online resources</li>
-                        <li>Learned HTML and CSS entirely through web resources</li>
+                        <li>Learned C++ and Lua through online resources</li>
                         <li>Learned Python through Rice University course offered online on coursera.org</li>
+                        <li>Learned HTML and CSS entirely through web resources</li>
                     </ul><br>
+                </li>
+                <li>Design Software: SolidWorks, Adobe Photoshop
+                    <ul class="indented">
+                        <li>Created several parts using SolidWorks</li>
+                        <li>Some past experience using Photoshop</li>
+                    </ul><br>                           
                 </li>
                 <li>Microsoft Office: experienced with Word, Excel, and PowerPoint
                     <ul class="indented">
                         <li>Extensive experience with Word, such as for writing lab reports and a 4000 word essay</li>
                         <li>Experience with Excel and PowerPoint</li>
                     </ul><br>
-                </li>
-                <li>Design Software: SolidWorks, Adobe Photoshop
-                    <ul class="indented">
-                        <li>Developed a few parts using SolidWorks</li>
-                        <li>Some past experience using Photoshop</li>
-                    </ul><br>                           
                 </li>
             </ul>
         </section>
