--- a/Education.html
+++ b/Education.html
@@ -34,6 +34,7 @@ and open the template in the editor.
                         <li>Currently in 1A term</li>
                         <li>Class of 2019</li>
                         <li>Received the President's Scholarship of Distinction for an admission average above 95%</li>
+                        <li>Won second at the UW EngHack hackathon of Fall 2014</li>
                     </ul><br>
                 </li>
                 <li>International Baccalaureate Diploma and Ontario Secondary School Diploma
@@ -42,7 +43,7 @@ and open the template in the editor.
                         <li>Kitchener, ON, Canada</li>
                         <li>2014</li>
                         <li>Graduated with IB and OSSD Diplomas, as well as a Cameron International Studies Certificates</li>
-                        <li>Graduated as an Ontario Scholar</li>
+                        <li>Graduated as an Ontario Scholar and Honour Roll student</li>
                         <li>Received awards for the highest mark among my graduating class in IB Mathematics and IB French</li>
                         <li>Received school letters for academic excellence and extracurricular participation</li>
                     </ul>
