--- a/Skills.html
+++ b/Skills.html
@@ -1,59 +1,92 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>Skills</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Mohamed Moussa's Personal Website">
+        <meta name="author" content="Mohamed Moussa">
+        <!-- <link rel="icon" href="../../favicon.ico"> -->
+
+        <!-- Bootstrap core CSS -->
+        <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="sticky-footer-navbar.css" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+        <title>Mohamed Moussa</title>
     </head>
-    <body id="skills">
-        <div class='headers'>  
-            <hgroup>
-                <h1>Mohamed Moussa</h1>
-                <h3>Systems Design Engineering student, University of Waterloo</h3>
-            </hgroup><br>
-            <div id="nav">               
-                <div class="navbar"><a href="index.html" id="aboutnav">About</a></div>
-                <div class="navbar"><a href="Skills.html" id="skillsnav">Skills</a></div>
-                <div class="navbar"><a href="Education.html" id="educationnav">Education</a></div>
-                <div class="navbar"><a href="Contact.html" id="contactnav">Contact</a></div>
+    <body>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="name-text">Mohamed Moussa</div>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse navbar-right">
+                    <ul class="nav navbar-nav">
+                        <li><a class="navbar-text" href="about.html">About</a></li>
+                        <li class="active tab-in-use"><a class="navbar-text" href="skills.html">Skills</a></li>
+                        <li><a class="navbar-text" href="experience.html">Experience</a></li>
+                        <li><a class="navbar-text" href="contact.html">Contact</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
+        </nav>
+
+        <!-- Begin page content -->
+        <div class="container">
+            <div class="page-header page-header-border">
+                <h1>Not to show off or anything, but...</h1>
+            </div>
+            <div class="row center">
+                <div class="col-lg-4">
+                    <p class="lead">Web development</p>
+                        <div class="text">HTML</div>
+                        <div class="text">CSS</div>
+                        <div class="text">Javascript</div>
+                        <div class="text">Node.js</div>
+                        <div class="text">Bootstrap</div>
+                </div>
+                <div class="col-lg-4">
+                    <p class="lead">Scripting and Console</p>
+                        <div class="text">C++</div>
+                        <div class="text">Python</div>
+                        <div class="text">Lua</div>
+                </div>
+                <div class="col-lg-4">
+                    <p class="lead">Design</p>
+                        <div class="text">SolidWorks</div>
+                        <div class="text">Photoshop</div>
+                </div>
+            </div>
+            
         </div>
-        <section>
-            <ul class="genformat" id='intro'>
-                <li>Programming Languages and Web Development: experienced with C++, Python, Lua, HTML, and CSS
-                    <ul class="indented">
-                        <li>Completed several projects using C++ and Python</li>
-                        <li>Wrote a script for the Myo armband using Lua during an engineering hackathon</li>
-                        <li>Built this website using HTML, CSS, and a line of PHP</li>
-                        <li>Projects can be found on <a href="https://github.com/mmmoussa" class='weblink'>GitHub</a></li>
-                    </ul><br>
-                </li>
-                <li>Programming Skills: experienced with pair programming and independently learning programming languages
-                    <ul class="indented">
-                        <li>Learned C++ and Lua through online resources</li>
-                        <li>Learned Python through Rice University course offered online on coursera.org</li>
-                        <li>Learned HTML and CSS entirely through web resources</li>
-                    </ul><br>
-                </li>
-                <li>Design Software: SolidWorks, Adobe Photoshop
-                    <ul class="indented">
-                        <li>Created several parts using SolidWorks</li>
-                        <li>Some past experience using Photoshop</li>
-                    </ul><br>                           
-                </li>
-                <li>Microsoft Office: experienced with Word, Excel, and PowerPoint
-                    <ul class="indented">
-                        <li>Extensive experience with Word, such as for writing lab reports and a 4000 word essay</li>
-                        <li>Experience with Excel and PowerPoint</li>
-                    </ul><br>
-                </li>
-            </ul>
-        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted footer-text">&copy 2014</p>
+            </div>
+        </footer>
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="dist/js/bootstrap.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
 </html>
