--- a/about.html
+++ b/about.html
@@ -14,9 +14,6 @@
         <!-- Custom styles for this template -->
         <link href="sticky-footer-navbar.css" rel="stylesheet">
 
-        <!-- Font Awesome icons link -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -40,10 +37,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="about.html">About</a></li>
+                        <li class="active"><a class="navbar-text" href="about.html">About</a></li>
                         <li><a class="navbar-text" href="skills.html">Skills</a></li>
                         <li><a class="navbar-text" href="experience.html">Experience</a></li>
-                        <li class="active"><a class="navbar-text" href="contact.html">Contact</a></li>
+                        <li><a class="navbar-text" href="contact.html">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -52,14 +49,22 @@
         <!-- Begin page content -->
         <div class="container">
             <div class="page-header page-header-border">
-                <h1>Interested in learning more about me? Contact me:</h1>
+                <h1>About me</h1>
             </div>
-            <p class="lead center">Contact me through email or LinkedIn, or check out my projects on GitHub</p>
-            <br>
-            <div class="row center">
-                <div class="col-lg-4"><i class="fa fa-envelope fa-5x"></i></div>
-                <div class="col-lg-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
-                <div class="col-lg-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
+            <div class="row">
+                <div class="col-lg-8">
+                    <p class="lead">Mohamed Moussa, 1A Systems Design Engineering Student</p>
+                    <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
+                        myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
+                        development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
+                        and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
+                        national finals. When not in class or studying I can often be found participating in hackathons and business events. <br><br>
+                        To learn more about me, check out my <a href="Resume.pdf">resume</a>.
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <img src="profile.png" alt="My picture" class="profile-pic"/>
+                </div>
             </div>
         </div>
 
