--- a/experience.html
+++ b/experience.html
@@ -14,9 +14,6 @@
         <!-- Custom styles for this template -->
         <link href="sticky-footer-navbar.css" rel="stylesheet">
 
-        <!-- Font Awesome icons link -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -42,8 +39,8 @@
                     <ul class="nav navbar-nav">
                         <li><a class="navbar-text" href="about.html">About</a></li>
                         <li><a class="navbar-text" href="skills.html">Skills</a></li>
-                        <li><a class="navbar-text" href="experience.html">Experience</a></li>
-                        <li class="active"><a class="navbar-text" href="contact.html">Contact</a></li>
+                        <li class="active"><a class="navbar-text" href="experience.html">Experience</a></li>
+                        <li><a class="navbar-text" href="contact.html">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -52,15 +49,40 @@
         <!-- Begin page content -->
         <div class="container">
             <div class="page-header page-header-border">
-                <h1>Interested in learning more about me? Contact me:</h1>
+                <h1>Life is about the experiences. Here are mine:</h1>
             </div>
-            <p class="lead center">Contact me through email or LinkedIn, or check out my projects on GitHub</p>
+            <p class="lead">24 Hour Startup 2014</p>
+            <ul>
+                <li class="text">Started the start-up company Citivate along with 5 other team members</li>
+                <li class="text">The team built a website and mobile application</li>
+                <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
+                <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
+            </ul>
             <br>
-            <div class="row center">
-                <div class="col-lg-4"><i class="fa fa-envelope fa-5x"></i></div>
-                <div class="col-lg-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
-                <div class="col-lg-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
-            </div>
+            <p class="lead">Waterloo EngHack Fall 2014</p>
+            <ul>
+                <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
+                <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
+                <li class="text">Won second place</li>
+                <li class="text">Check out the game <a href="http://www.jhudson.ca/enghack_1/">here</a> (wait a minute for the game to load past the Windows screen of death)</li>
+                <li class="text">Check out the Myo scripts <a href="">here</a></li>
+            </ul>
+            <br>
+            <p class="lead">Math Tester</p>
+            <ul>
+                <li class="text">Built a math quiz console application using C++</li>
+                <li class="text">The quiz keeps track of progress during a session</li>
+                <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
+                <li class="text">Check out the application <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
+            </ul>
+            <br>
+            <p class="lead">Nerf Weapon Randomizer</p>
+            <ul>
+                <li class="text">Built a console application with versions in both C++ and Python</li>
+                <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
+                <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
+                <li class="text">Check out the application <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
+            </ul>
         </div>
 
         <footer class="footer">
