Update and rename Contact.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="about.html">About</a></li>
+                        <li><a class="navbar-text" href="index.html">About</a></li>
                         <li><a class="navbar-text" href="skills.html">Skills</a></li>
                         <li><a class="navbar-text" href="experience.html">Experience</a></li>
                         <li class="active"><a class="navbar-text" href="contact.html">Contact</a></li>
