Updated page titles and headers

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav">
                         <li><a class="navbar-text" href="index.html">About</a></li>
                         <li><a class="navbar-text" href="skills.html">Skills</a></li>
-                        <li class="active"><a class="navbar-text" href="experience.html">Experience</a></li>
+                        <li class="active"><a class="navbar-text" href="projects.html">Projects</a></li>
                         <li><a class="navbar-text" href="contact.html">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -49,7 +49,7 @@
         <!-- Begin page content -->
         <div class="container">
             <div class="page-header page-header-border">
-                <h1>Life is about the experiences. Here are mine:</h1>
+                <h1>My portfolio</h1>
             </div>
             <p class="lead">24 Hour Startup 2014</p>
             <ul>
