--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a class="navbar-text" href="index.html">About</a></li>
                         <li><a class="navbar-text" href="skills.html">Skills</a></li>
-                        <li><a class="navbar-text" href="experience.html">Experience</a></li>
+                        <li><a class="navbar-text" href="projects.html">Projects</a></li>
                         <li><a class="navbar-text" href="contact.html">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
