--- a/skills.html
+++ b/skills.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav">
                         <li><a class="navbar-text" href="index.html">About</a></li>
                         <li class="active tab-in-use"><a class="navbar-text" href="skills.html">Skills</a></li>
-                        <li><a class="navbar-text" href="experience.html">Experience</a></li>
+                        <li><a class="navbar-text" href="projects.html">Projects</a></li>
                         <li><a class="navbar-text" href="contact.html">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -49,7 +49,7 @@
         <!-- Begin page content -->
         <div class="container">
             <div class="page-header page-header-border">
-                <h1>Not to show off or anything, but...</h1>
+                <h1>My skills</h1>
             </div>
             <div class="row center">
                 <div class="col-lg-4">
