Updated projects page

--- a/projects.html
+++ b/projects.html
@@ -49,15 +49,22 @@
         <!-- Begin page content -->
         <div class="container">
             <div class="page-header page-header-border">
-                <h1>My portfolio</h1>
+                <h1>My projects</h1>
             </div>
-            <p class="lead">24 Hour Startup 2014</p>
-            <ul>
-                <li class="text">Started the start-up company Citivate along with 5 other team members</li>
-                <li class="text">The team built a website and mobile application</li>
-                <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
-                <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
-            </ul>
+            <div class="row">
+                <div class="col-lg-8">
+                    <p class="lead">24 Hour Startup 2014</p>
+                    <ul>
+                        <li class="text">Started the start-up company Citivate along with 5 other team members</li>
+                        <li class="text">The team built a website and mobile application</li>
+                        <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
+                        <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <img src="logo.jpg" alt="Citivate logo" height="200px" width="200px"/>
+                </div>
+            </div>
             <br>
             <p class="lead">Waterloo EngHack Fall 2014</p>
             <ul>
