Changed column widths

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1>About me</h1>
             </div>
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-md-8">
                     <p class="lead">Mohamed Moussa, 1A Systems Design Engineering Student</p>
                     <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                         myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
@@ -63,7 +63,7 @@
                     </div>
                     <br>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <img src="profile.png" alt="My picture" class="profile-pic"/>
                 </div>
             </div>
