--- a/skills.html
+++ b/skills.html
@@ -52,7 +52,7 @@
                 <h1>My skills</h1>
             </div>
             <div class="row center">
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p class="lead">Web development</p>
                         <div class="text">HTML</div>
                         <div class="text">CSS</div>
@@ -61,14 +61,14 @@
                         <div class="text">Bootstrap</div>
                         <br><br><br>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p class="lead">Scripting and Console</p>
                         <div class="text">C++</div>
                         <div class="text">Python</div>
                         <div class="text">Lua</div>
                         <br><br><br>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p class="lead">Design</p>
                         <div class="text">SolidWorks</div>
                         <div class="text">Photoshop</div>
