Added links and pictures to the projects page

--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,11 @@
                         <li class="text">The team built a website and mobile application</li>
                         <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
                         <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
+                        <li>Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
-                    <img src="logo.jpg" alt="Citivate logo" height="200px" width="200px"/>
+                    <img src="logo.jpg" alt="Citivate logo" class="logo-pic"/>
                 </div>
             </div>
             <br>
