--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                         <li class="text">The team built a website and mobile application</li>
                         <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
                         <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
-                        <li>Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
+                        <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
