Update logo code

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-4">
-                    <img src="logo.jpg" alt="Citivate logo" class="logo-pic"/>
+                    <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
                 </div>
             </div>
             <br>
