Fixed 24 hour columns

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                 <h1>My projects</h1>
             </div>
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-md-8">
                     <p class="lead">24 Hour Startup 2014</p>
                     <ul>
                         <li class="text">Started the start-up company Citivate along with 5 other team members</li>
@@ -62,7 +62,7 @@
                         <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
                 </div>
             </div>
