--- a/resources.html
+++ b/resources.html
@@ -54,8 +54,8 @@
             <div>
                 <h3>Check out these links for SYDE resources:</h3>
                 <ul>
-                    <li><a href="https://drive.google.com/folderview?id=0BxePvoyWgPAlTTc1ZEV4RlBNR2c&usp=sharing">Google Drive</a></li>
-                    <li><a href="https://www.dropbox.com/sh/5beppvu2z36apxi/AAALIpMnoDJj6weD9lhvkX9Sa?dl=0">Textbook Dropbox</a></li>
+                    <li><a href="https://www.facebook.com/notes/systems-design-and-biomedical-engineering-class-of-2019/links-to-everything/1531904410376990">Links to everything</a></li>
+                    <li><a href="https://uwaterloo.ca/co-operative-education/important-dates">Co-op important dates</a></li>
                     <li><a href="Final Exam Schedule.pdf">Final exam schedule</a></li>
                 </ul>
                 <br>
