--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             <p class="lead center">Contact me through email or LinkedIn, or check out my projects on GitHub</p>
             <br>
             <div class="row center">
-                <div class="col-md-4"><i class="fa fa-envelope fa-5x"></i></div>
+                <div class="col-md-4"><a href="mailto:mmmoussa@uwaterloo.ca"><i class="fa fa-envelope fa-5x"></i></a></div>
                 <div class="col-md-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
                 <div class="col-md-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
             </div>
