Updated website and removed systems mock-up
 Added TicTacToe project and removed files pertaining to the systems
website being hosted at the same address

--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,17 @@
             <div class="page-header page-header-border">
                 <h1>My projects</h1>
             </div>
+            <p class="lead">Terminal TicTacToe</p>
+            <ul>
+                <li class="text">I built the game TicTacToe to be played in the terminal</li>
+                <li class="text">The game can be played against a friend or a computer</li>
+                <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
+                <li class="text">Download the game <a href="Terminal TicTacToe.exe">here</a></li>
+            </ul>
+            <br>
             <p class="lead">24 Hour Startup 2014</p>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-10">
                     <ul>
                         <li class="text">Started the start-up company Citivate along with 5 other team members</li>
                         <li class="text">The team built a website and mobile application</li>
@@ -62,7 +70,7 @@
                         <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
                 </div>
             </div>
@@ -73,7 +81,7 @@
                 <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
                 <li class="text">Won second place</li>
                 <li class="text">Check out the game <a href="http://www.jhudson.ca/enghack_1/">here</a> (wait a minute for the game to load past the Windows screen of death)</li>
-                <li class="text">Check out the Myo scripts <a href="">here</a></li>
+                <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
             </ul>
             <br>
             <p class="lead">Math Tester</p>
