Updating TicTacToe for Mac

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                 <li class="text">I built the game TicTacToe to be played in the terminal</li>
                 <li class="text">The game can be played against a friend or a computer</li>
                 <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
-                <li class="text">Download the game for Mac <a href="Terminal TicTacToe">here</a></li>
+                <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
                 <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
             </ul>
             <br>
