--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                 <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
                 <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
                 <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
-                <li class="text">Check out the code here <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
+                <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
             </ul>
             <br>
             <p class="lead">24 Hour Startup 2014</p>
